# ncotclient

./: .gitignore  configure.ac  cpwclient
src/: Makefile.am  app-menu.ui  connect.ui  gtk3test.c  ncotclient.c  ncotclient.gresource.xml  ncotclient.h  ncotclientconnect.c  ncotclientconnect.h  ncotclientmain.c  ncotclientprefs.c  ncotclientprefs.h  ncotclientwin.c  ncotclientwin.h  nctmain.glade  org.gtk.ncotclient.gschema.xml  prefs.ui  resources.c  window.ui
